@@ -383,6 +383,7 @@ library:
 @item SDP                       @tab   @tab X
 @item Sega FILM/CPK             @tab   @tab X
     @tab Used in many Sega Saturn console games.
+@item Silicon Graphics Movie    @tab   @tab X
 @item Sierra SOL                @tab   @tab X
     @tab .sol files used in Sierra Online games.
 @item Sierra VMD                @tab   @tab X
