@@ -21,6 +21,7 @@ version <next>:
 - asettb filter
 - Silicon Graphics RLE 8-bit video decoder
 - Silicon Graphics Motion Video Compressor 1 & 2 decoder
+- Silicon Graphics Movie demuxer
 
 
 version 10:
